--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-github: [robbyrussell, mcornella, larson-carter]
-open_collective: ohmyzsh
+ko_fi: zartek
+custom: ['github.com/ZarTek-Creole/DONATE']
